tests/error/comptime/range_bounds_check3.bz
// error: the begin value 0 in a range expression is greater than the end value -1
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		0i64..-1i64
	});
}
